erDiagram
    BLOG_CATEGORIES {
        uuid id PK
        text name UK
        text slug UK
        text description
    }

    BLOG_POSTS {
        uuid id PK
        text title
        text slug UK
        text summary
        text content
        text cover_image_url
        text_array tags
        boolean published
        uuid author_id "ссылается на auth.users (логически)"
        text author_display_name "денормализация"
        uuid category_id FK
        timestamptz created_at
        timestamptz updated_at
    }

    BLOG_COMMENTS {
        uuid id PK
        uuid post_id FK
        uuid author_id "ссылается на auth.users (логически)"
        text author_display_name "денормализация"
        text content
        timestamptz created_at
    }

    PROCESSED_EVENTS {
        uuid event_id PK "user.deleted"
        timestamptz processed_at
    }

    BLOG_CATEGORIES ||--o{ BLOG_POSTS : "содержит"
    BLOG_POSTS ||--o{ BLOG_COMMENTS : "обсуждается в"
